--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             <label for="grade">Nota (1.0 - 7.0)</label>
             <input type="number" id="grade" step="0.1" min="1" max="7" required>
         </div>
+        <div>
+            <label for="date">Fecha</label>
+            <input type="date" id="date" required>
+        </div>
         <button type="submit">Guardar Estudiante</button>
     </form>
     <table id="studentsTable" border=1 cellpadding="8" cellspacing="0">
@@ -28,6 +32,7 @@
             <th>Nombre</th>
             <th>Apellido</th>
             <th>Nota</th>
+            <th>Fecha</th>
         </tr>
     </thead>
     <tbody>
