--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h2>Notas Asignatura Front-End</h2>
+    <div id="average">Promedio General del Curso: N/A </div>
     <form id="studentForm">
         <div>
             <label for="name">Nombre</label>
