--- a/index.html
+++ b/index.html
@@ -1,46 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Notas Front-End</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>Notas Asignatura Front-End</h2>
-    <div id="average">Promedio General del Curso: N/A </div>
-    <form id="studentForm">
-        <div>
-            <label for="name">Nombre</label>
-            <input type="text" id="name" required>
-        </div>
-        <div>
-            <label for="lastName">Apellido</label>
-            <input type="text" id="lastName" required>
-        </div>
-        <div>
-            <label for="grade">Nota (1.0 - 7.0)</label>
-            <input type="number" id="grade" step="0.1" min="1" max="7" required>
-        </div>
-        <div>
-            <label for="date">Fecha</label>
-            <input type="date" id="date" required>
-        </div>
-        <button type="submit">Guardar Estudiante</button>
-    </form>
-    <table id="studentsTable" border=1 cellpadding="8" cellspacing="0">
-    <thead>
-        <tr>
-            <th>Nombre</th>
-            <th>Apellido</th>
-            <th>Nota</th>
-            <th>Fecha</th>
-        </tr>
-    </thead>
-    <tbody>
-        <!--Filas de datos-->
-    </tbody>
-    </table>
+    <main>
+        <h1>Notas de Asignatura Front-End</h1>
+
+        <div id="average">Promedio General del Curso: N/A</div>
+
+        <form id="studentForm" novalidate>
+
+            <div class="form-group">
+                <label for="name">Nombre</label>
+                <input type="text" id="name" >
+            </div>
+
+            <div class="form-group">
+                <label for="lastName">Apellido</label>
+                <input type="text" id="lastName" >
+            </div>
+
+            <div class="form-group">
+                <label for="grade">Nota (1.0 - 7.0)</label>
+                <input type="number" id="grade" step="0.1" min="1" max="7" >
+            </div>
+
+            <div class="form-group">
+                <label for="date">Fecha</label>
+                <input type="date" id="date" >
+            </div>
+
+            <button type="submit">Guardar Estudiante</button>
+        </form>
+
+        <section>
+            <h2>Listado de Estudiantes</h2>
+            <div class="table-container">
+                <table id="studentsTable">
+                    <thead>
+                        <tr>
+                            <th>Nombre</th>
+                            <th>Apellido</th>
+                            <th>Nota</th>
+                            <th>Fecha</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <!-- Filas de datos -->
+                    </tbody>
+                </table>
+            </div>
+        </section>
+    </main>
+
     <script src="script.js"></script>
 </body>
 </html>
