--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                             <th>Apellido</th>
                             <th>Nota</th>
                             <th>Fecha</th>
+                            <th>Acciones</th>
                         </tr>
                     </thead>
                     <tbody>
