--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <h1>Notas de Asignatura Front-End</h1>
 
         <div id="average">Promedio General del Curso: N/A</div>
+        <div id="totalStudents">Total de Estudiantes: N/A</div>
+        <div id="studentsApproved">Cantidad de Aprobados: N/A</div>
+        <div id="studentsDisApproved">Cantidad de Aprobados: N/A</div>
 
         <form id="studentForm" novalidate>
 
